# n7timer-weather-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  n7timer-weather.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  config.lua  features.lua  n7timer-weather.rockspec  n7timer-weather_sdk.lua  n7timer-weather_types.lua
php/: AGENTS.md  CLAUDE.md  (+6 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  n7timerweather_sdk.py  n7timerweather_types.py  pyproject.toml
py/core/: context.py  control.py  error.py  response.py  result.py  utility_type.py
py/entity/: apipl_entity.py  graphical_api_entity.py
py/feature/: clienttrack_feature.py  idempotency_feature.py  log_feature.py  metrics_feature.py  streaming_feature.py  test_feature.py  timeout_feature.py
py/test/: feature_harness.py  runner.py  test_apipl_direct.py  test_apipl_entity.py  test_exists.py  test_graphical_api_direct.py  test_graphical_api_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: done.py  fetcher.py  make_context.py  make_error.py  make_fetch_def.py  make_point.py  make_request.py  make_response.py  make_result.py  param.py  prepare_auth.py  prepare_params.py  register.py  result_body.py  result_headers.py  transform_response.py
(+434 files in other folders)
